# personal_budget_app_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: auto_assign_issues.yml  format_code.yml  test_code.yml
frontend/: index.html
src/: lib.rs  main.rs  telemetry.rs
src/logic/: index.rs  mod.rs  savings.rs
static/css/: index.css  index.css.map
static/scss/: index.scss
templates/: 404.html  about.html  base.html  budget.html  credit.html  debt.html  finances.html  income.html  index.html  investment.html  retirement.html  savings.html
tests/: integration_test.rs
