[package]
name = "personal_budget_app_rs"
version = "0.1.0"
edition = "2021"
authors = ["Hunter, Christerpher <djhunter67@gmail.com>"]
description = "A personal budget app written wrangle in my wild finances. I feel poor, but I'm not. I just need to get a handle on my finances."
repository = "github.com/djhunter67/personal_budget_app_rs"
license = "MIT"
readme = "README.md"
keywords = ["personal", "budget", "finance", "app"]
categories = ["personal", "finance", "budget"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
askama = "0.12.0"
askama_actix = "0.14.0"
log = "0.4.20"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }




	 
